Add main() benchmark